Fix menu overlapping content between 1001px/1024px Fixes Bug 843648

--- a/media/css/firefox/partners/desktop.less
+++ b/media/css/firefox/partners/desktop.less
@@ -297,6 +297,7 @@
         z-index: 50;
         padding-top: 140px;
         .span(7);
+        margin-left: 20px;
         .narrow {
             margin-right: 140px;
         }
@@ -316,7 +317,6 @@
         }
         .left {
             .span(6);
-            margin-left: 0;
             ul li {
                 margin: 10px 20px;
             }
@@ -326,6 +326,7 @@
         }
         .logos {
             .span(6);
+            margin-left: 0;
             margin-right: 0;
         }
     }
@@ -352,6 +353,7 @@
     #marketplace-overview {
         .intro {
             .span(8);
+            margin-left: 20px;
             width: 580px;
             .narrow {
                 margin-right: 140px;
@@ -383,7 +385,6 @@
         }
         .left {
             .span(6);
-            margin-left: 0;
             .partner-button {
                 a:first-child {
                     margin-right: 20px;
@@ -395,6 +396,7 @@
         }
         .logos {
             .span(6);
+            margin-left: 0;
             margin-right: 0;
         }
     }
@@ -413,6 +415,7 @@
                     .span(5);
                     padding-top: 0;
                     margin-right: 0;
+                    margin-left: 0;
                     margin-bottom: @baseLine;
                     clear: none;
                     div {
@@ -431,7 +434,6 @@
             }
             .left {
                 .span(7);
-                margin-left: 0;
                 .partner-button {
                     a:first-child {
                         margin-right: 20px;
@@ -453,6 +455,7 @@
     .intro {
         padding-top: 140px;
         .span(6);
+        margin-left: 20px;
         .narrow {
             margin-right: 100px;
         }
